add icon for cart and correct focus state for nav menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,7 +302,7 @@ main {
 }
 
 .menu-user-item {
-  margin-right: 26px;
+  margin-right: 18px;
   position: relative;
 }
 
@@ -311,11 +311,17 @@ main {
 }
 
 .menu-user-link {
+  position: relative;
   display: block;
-  padding-left: 26px;
+  padding-left: 22px;
   color: #000000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.menu-user-link-cart {
+  padding-left: 42px;
+  position: relative;
 }
 
 .menu-user-link:focus {
@@ -333,9 +339,30 @@ main {
 
 .menu-user-icon {
   position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.menu-user-icon-cart {
+  position: absolute;
+  left: 17px;
+}
+
+.menu-user-link-cart::before {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  content: "2";
+  background-color: #ffffff;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  z-index: 1;
 }
 
 .header-bottom {
@@ -349,10 +376,6 @@ main {
 .header-bottom-inner {
   padding-bottom: 22px;
 }
-
-/* .menu-button span {
-  margin-right: 15px;
-} */
 
 .menu-button {
   display: flex;
@@ -403,7 +426,7 @@ main {
   background: rgba(0, 0, 0, 0.25);
 }
 
-.menu-button:focus {
+.menu-button:focus-within {
   outline: 2px solid #AF4FFF;
   outline-offset: 2px;
 }
@@ -412,28 +435,32 @@ main {
   outline: none;
 }
 
-.menu-button:hover .button-dropdown {
+.menu-nav:hover .button-dropdown {
   border: 1px solid #000000;
 }
 
-.menu-button:hover .button-dropdown::before {
+.menu-nav:hover .button-dropdown::before {
   background: #000000;
 }
 
-.menu-button:hover .button-dropdown::after {
+.menu-nav:hover .button-dropdown::after {
   background: #000000;
 }
 
-.menu-button:active .button-dropdown {
+.menu-nav:active .button-dropdown {
   border: 1px solid #000000;
 }
 
-.menu-button:active .button-dropdown::before {
+.menu-nav:active .button-dropdown::before {
   background: #000000;
 }
 
-.menu-button:active .button-dropdown::after {
+.menu-nav:focus-within .button-dropdown::after {
   display: none;
+}
+
+.menu-nav:focus-within .navigation {
+  display: flex;
 }
 
 .menu-list {
@@ -486,7 +513,7 @@ main {
 }
 
 .navigation {
-  display: flex;
+  display: none;
 }
 
 .navigation-list {
@@ -634,7 +661,6 @@ main {
   height: 40px;
   text-align: center;
   padding: 10px 5px;
-  margin-bottom: 49px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -682,12 +708,17 @@ main {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 76px;
 }
 
 .slider-pagination-item {
   list-style: none;
+}
+
+.slider-pagination-item:not(:nth-child(3n)) {
+  margin-right: 20px;
 }
 
 .slider-pagination-button {
@@ -738,6 +769,7 @@ main {
 .slider-line {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 49px;
 }
 
 .slider-specifications-list {
@@ -866,6 +898,7 @@ main {
   width: 280px;
   margin-bottom: 35px;
   position: relative;
+  z-index: 1;
 }
 
 .service-item-current {
@@ -981,8 +1014,7 @@ main {
   text-decoration: none;
   text-transform: uppercase;
   cursor: pointer;
-  position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .button-service::after {
@@ -1031,98 +1063,12 @@ main {
   outline-offset: 2px;
 }
 
-
 .order-button:hover {
   background: linear-gradient(to right, #FFC700 125px, #F0F0F0 125px);
 }
 
 .order-button:active {
   opacity: 0.3;
-}
-
-.order-form-active{
-  width: 920px;
-  margin: 0 auto;
-  padding: 72px 80px;
-  display: grid;
-  grid-template-columns: repeat(4, 180px);
-  gap: 40px 42px;
-}
-
-.order-form {
-  display: none;
-}
-
-.order-form label {
-  font-weight: 700;
-  line-height: 20px;
-  margin-bottom: 14px;
-}
-
-.order-form input {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 20px;
-  opacity: 0.3;
-  padding: 20px;
-}
-
-.order-form-title {
-  grid-column: 1/-1;
-  margin: 0;
-  font-family: Raleway;
-  font-weight: 800;
-  font-size: 50px;
-  line-height: 50px;
-}
-
-.order-form-name {
-  margin: 0;
-  grid-column: 1/3;
-  display: flex;
-  flex-direction: column;
-}
-
-.order-form-mail {
-  margin: 0;
-  grid-column: 3/5;
-  display: flex;
-  flex-direction: column;
-}
-
-.order-form-text {
-  margin: 0;
-  grid-column: 1/4;
-  display: flex;
-  flex-direction: column;
-}
-
-.order-form-number {
-  margin: 0;
-  grid-column: 4/5;
-  display: flex;
-  flex-direction: column;
-}
-
-.order-form-button {
-  box-sizing: border-box;
-  display: block;
-  min-width: 200px;
-  height: 40px;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  color: #000000;
-  text-decoration: none;
-  text-transform: uppercase;
-  grid-column: 1/-1;
-  justify-self: start;
-  cursor: pointer;
 }
 
 .information {
@@ -1416,7 +1362,7 @@ main {
   color: #000000;
   background-color: transparent;
   border: 0;
-  border-bottom: 1px solid #C4C4C4;
+  border-bottom: 3px solid #C4C4C4;
 }
 
 .form-email input::placeholder {
@@ -1425,9 +1371,11 @@ main {
 }
 
 .form-email input:focus {
-  outline: 2px solid #AF4FFF;
-  outline-offset: 2px;
-  z-index: 1;
+  outline: none;
+}
+
+.form-email input:invalid {
+  border-color: #FF3D3D;
 }
 
 .button-mail {
@@ -1436,7 +1384,7 @@ main {
   height: 57px;
   margin: 0;
   padding: 0;
-  border: 1px solid #C4C4C4;
+  border: 3px solid #C4C4C4;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 21px;
