--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ html {
 }
 
 .container {
+  position: relative;
   width: 1160px;
   margin: 0 auto;
 }
@@ -671,9 +672,14 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
-  width: 475px;
+  justify-content: flex-end;
+  width: 480px;
   flex-wrap: wrap;
 }
+
+/* .navigation-item-service {
+  min-width: 127px;
+} */
 
 .navigation-item-service:not(:last-child) {
   margin-right: 45px;
@@ -1216,12 +1222,14 @@ body {
 }
 
 .order {
+  position: relative;
   background-color: #ffffff;
   color: #000000;
   margin-bottom: 70px;
 }
 
 .order-button {
+  position: relative;
   padding: 40px 125px 40px 125px;
   font-family: "Raleway", sans-serif;
   font-size: 20px;
@@ -1234,10 +1242,10 @@ body {
   cursor: pointer;
   border: none;
   background: linear-gradient(to right, #FFE17F 125px, #F0F0F0 125px);
-  position: relative;
+
 }
 
-.order-button::after {
+.order-button::before {
   content: "";
   position: absolute;
   left: 39px;
@@ -1257,8 +1265,17 @@ body {
   background: linear-gradient(to right, #FFC700 125px, #F0F0F0 125px);
 }
 
+.order-button:hover ~ .tooltip-button-order {
+  color: #000000;
+}
+
 .order-button:active {
   opacity: 0.3;
+}
+
+.order-button:active ~ .tooltip-button-order{
+  opacity: 0.3;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .modal-container {
@@ -1273,10 +1290,10 @@ body {
   z-index: 1;
 }
 
-.modal-container-close {
+/* .modal-container-close {
   display: none;
 }
-
+ */
 .modal-order {
   box-sizing: border-box;
   margin: 0 auto;
@@ -1319,9 +1336,10 @@ body {
 
 .order-form{
   margin: 0 auto;
+  margin-bottom: 42px;
   display: grid;
   grid-template-columns: 360px 140px 180px;
-  gap: 40px;
+  gap: 62px 40px;
 }
 
 .form-label {
@@ -1337,9 +1355,10 @@ body {
 
 .form-input {
   box-sizing: border-box;
-  font-size: 16px;
+  font-family: 'Rubik';
   font-weight: 400;
   line-height: 20px;
+  font-size: 16px;
   padding: 20px;
   border: none;
   background-color: #F0F0F0;
@@ -1514,25 +1533,58 @@ label.form-label {
   border: none;
   width: 26px;
   height: 26px;
+  top: 50%;
+  transform: translateY(-50%);
   background-color: #FFE17F;
   color: #000000;
   border-radius: 50%;
+  z-index: 1;
 }
 
-.tooltip-text {
+.tooltip-button-order {
   position: absolute;
+  background-color: rgba(220, 220, 220, 0.5);
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 30px;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.tooltip-button-order::after {
+  content: "Постараемся найти, сколько нужно. Привезём сколько получится по требованиям к провозу багажа.";
+  position: absolute;  
   display: none;
   box-sizing: border-box;
   width: 200px;
   padding: 19px;
   top: 100%;
+  transform: translateY(7px);
+  right: -30px;
   font-family: Rubik;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  background-color: #000000;
+  background: url('../images/form/tooltip-triangle.svg') no-repeat top right 43px, linear-gradient(transparent 6px , #000000 6px);
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
   color: #ffffff;
+  text-align: left;
+}
+
+.tooltip-button:hover {
+  color: #000000;
+}
+
+.tooltip-button-order:hover::after, .tooltip-button:focus::after {
+  display: block;
+}
+
+.tooltip-button-order:focus {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .tooltip-button:hover + .tooltip-text, .tooltip-button:focus + .tooltip-text {
@@ -1540,7 +1592,28 @@ label.form-label {
 }
 
 .tooltip-button:focus {
-  outline: none;
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+}
+
+.tooltip-text {
+  position: absolute;
+  display: none;
+  box-sizing: border-box;
+  width: 200px;
+  padding: 25px 19px 19px 19px;
+  margin-top: 4px;
+  margin-left: -20px;
+  top: 100%;  
+  transform: translateY(4px);
+  font-family: Rubik;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  background: url('../images/form/tooltip-triangle.svg') no-repeat top right 43px, linear-gradient(#ffffff 6px , #000000 6px);
+  color: #ffffff;
+  text-align: left;
+  z-index: 1;
 }
 
 .order-form-button {
@@ -1563,7 +1636,8 @@ label.form-label {
   grid-column: 1/-1;
   justify-self: start;
   cursor: pointer;
-  position: relative;
+  position: relative;  
+  letter-spacing: 0.2em;
   z-index: 1;
 }
 
